--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "logger": "^0.0.1",
+    "moment-timezone": "^0.5.37",
     "mssql": "^9.0.1"
   },
   "devDependencies": {
